--- a/shoe-ui/package.json
+++ b/shoe-ui/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 PORT=3000 node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.1.1",
+    "next": "^9.0.3",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "express": "^4.17.1",
     "@material-ui/core": "4.1.1",
     "@material-ui/icons": "4.2.0",
     "@material-ui/styles": "4.1.1",
     "cross-env": "^5.2.0",
     "clsx": "latest",
-    "prop-types": "latest"
+    "compression": "^1.7.4",
+    "isomorphic-unfetch": "^3.0.0",
+    "prop-types": "^15.7.2",
+    "react-jss": "^8.6.1",
+    "styled-jsx": "^3.2.1",
+    "cors": "latest",
+    "http-proxy-middleware": "latest"
   }
 }
