--- a/shoe-ui/package.json
+++ b/shoe-ui/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^9.0.3",
+    "next": "latest",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "express": "^4.17.1",
@@ -22,7 +22,8 @@
     "prop-types": "^15.7.2",
     "react-jss": "^8.6.1",
     "styled-jsx": "^3.2.1",
-    "cors": "latest",
-    "http-proxy-middleware": "latest"
+    "http-proxy-middleware": "latest",
+    "material-table": "latest",
+    "react-select": "latest"
   }
 }
