--- a/shoe-service/src/test/resources/application.properties
+++ b/shoe-service/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 spring.flyway.enabled=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shoe_db
-spring.datasource.username=shoe_dba
-spring.datasource.password=shoe1234
-#spring.datasource.schema=shoe_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/shoe_db
+#spring.datasource.username=shoe_dba
 
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
