--- a/shoe-ui/package.json
+++ b/shoe-ui/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 PORT=3000 node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 PORT=3000 NODE_ENV=production node server.js"
   },
   "dependencies": {
     "next": "latest",
