--- a/shoe-service/.gitignore
+++ b/shoe-service/.gitignore
@@ -29,3 +29,27 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+.env*
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
