--- a/shoe-service/src/main/resources/application-local.properties
+++ b/shoe-service/src/main/resources/application-local.properties
@@ -9,5 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.boot.admin.client.url=http://localhost:8080
+spring.boot.admin.client.url=http://localhost:8080/admin
+spring.boot.admin.context-path=/admin
 management.endpoints.web.exposure.include=*
