--- a/shoe-service/src/test/resources/application.properties
+++ b/shoe-service/src/test/resources/application.properties
@@ -6,3 +6,5 @@ spring.flyway.enabled=false
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8090/auth/.well-known/jwks.json
