--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,8 +26,24 @@ services:
     depends_on:
       - postgres
 
+  spring-boot-admin-server:
+    image: "waggins/spring-boot-admin-server:v1"
+    networks:
+      - postgres
+    ports:
+      - "8091:8091"
+    restart: unless-stopped
+
+  authorization-server:
+    image: "waggins/authorization-server:v1"
+    networks:
+      - postgres
+    ports:
+      - "8090:8090"
+    restart: unless-stopped
+
   shoe-service:
-    image: "waggins/shoe-service:v2"
+    image: "waggins/shoe-service:v3"
     networks:
       - postgres
     ports:
@@ -35,11 +51,15 @@ services:
     restart: unless-stopped
     links:
       - postgres
+      - spring-boot-admin-server
+      - authorization-server
     depends_on:
       - postgres
+      - spring-boot-admin-server
+      - authorization-server
 
   shoe-ui:
-    image: "waggins/shoe-ui:v2"
+    image: "waggins/shoe-ui:v3"
     networks:
       - postgres
     ports:
