--- a/shoe-service/src/main/resources/application-local.properties
+++ b/shoe-service/src/main/resources/application-local.properties
@@ -21,3 +21,12 @@ management.endpoints.web.exposure.include=*
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8090/auth/.well-known/jwks.json
 
 logging.level.org.springframework.security=DEBUG
+debug=true
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.cache-names=shoeDimCache
+
+management.endpoint.caches.enabled=true
+server.port=9001
