--- a/shoe-service/src/main/resources/application-docker.properties
+++ b/shoe-service/src/main/resources/application-docker.properties
@@ -19,3 +19,8 @@ management.endpoints.web.exposure.include=*
 #spring.security.user.password=shoe-service-password
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://authorization-server:8090/auth/.well-known/jwks.json
+
+spring.cache.redis.key-prefix=redis
+spring.redis.host=redis
+spring.redis.port=6379
+spring.cache.cache-names=shoeDimCache
